 - Added Batch API on the 'Preview' page.
 - Added 'Add Source' shortcut on Harvest Dashboard pages.
 - Fixed breadcrumb on harvest sources pages: Preview, Manage Datasets, Events, Errors.
 - Fixed harvesting of resources with remote files with redirects.
 - Fix "Manage Datastore" tab leaking to the harvest source node.
 - Add icons for harvest source tabs.
DKAN Migrate Base:
 - Added DKAN Migrate Base module into DKAN Core.
 - Removed row from migration map table when a dataset is deleted.
DKAN Workflow:
 - Updated DKAN workflow vbo customizations to not affect other vbo forms.
 - Updated workbench_email from 3.9 to 3.11
 - Fixed admin menu source when dkan_workflow is enabled
DKAN Dataset:
 - Added DKAN Dataset module into DKAN Core.
 - Added default image for groups.
 - Add preview support for resources of many more formats, outside of recline.js. Support added for JSON, geojson, XML, ArcGIS REST, WMS, images, PDF, ZIP
 - Fix bugs in resource mimetypes and previews.
 - Groups field on Dataset form was modified to be a single select with all group options and it was moved from the tabs section to the main section of the form. 
 - Groups field was hidden on the resource form since groups are assigned automatically based on the parent datasets.
 - Add more frequency update options to the dataset creation form https://project-open-data.cio.gov/iso8601_guidance/#accrualperiodicity
 - Moved and renamed the following fields from ODFE to DKAN Core: field_is_part_of, field_data_dictionary_type, field_landing_page, field_pod_theme, field_conforms_to, field_rights, field_language.
 - Added hook updates to handle the renaming of the old ODFE fields removing the 'odfe' namespacing.
 - Added hook update to migrate the content from field_odfe_category to field_pod_theme on Datasets.
 - Added new option on DKAN Dataset Forms to enable POD based validation on Dataset form.
 - Added new option on DKAN Dataset Forms to enable Groups field validation on Dataset form.